[gd_scene load_steps=15 format=1]

[ext_resource path="res://scripts/stages/Stage23.gd" type="Script" id=1]
[ext_resource path="res://scenes/stages/extras/backgrounds/CloudsHD.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/tilesets/Snow.xml" type="TileSet" id=3]
[ext_resource path="res://scenes/stages/extras/KillZone.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/stages/extras/Door.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/stages/extras/MovingPlatformY.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/monsters/Bobo.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/monsters/Roco.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/monsters/Gobo.tscn" type="PackedScene" id=9]
[ext_resource path="res://scenes/coins/HorizontalCoin.tscn" type="PackedScene" id=10]
[ext_resource path="res://scenes/coins/Coin.tscn" type="PackedScene" id=11]
[ext_resource path="res://scenes/hearts/Heart.tscn" type="PackedScene" id=12]
[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=13]
[ext_resource path="res://scenes/hazzards/RotatingFire.tscn" type="PackedScene" id=14]

[node name="Stage23" type="Node2D"]

script/script = ExtResource( 1 )

[node name="Clouds" parent="." instance=ExtResource( 2 )]

[node name="TileMap" type="TileMap" parent="."]

mode = 0
tile_set = ExtResource( 3 )
cell/size = Vector2( 64, 64 )
cell/quadrant_size = 16
cell/custom_transform = Matrix32( 1, 0, 0, 1, 0, 0 )
cell/half_offset = 2
cell/tile_origin = 0
cell/y_sort = false
collision/use_kinematic = false
collision/friction = 1.0
collision/bounce = 0.0
collision/layers = 1
collision/mask = 1
occluder/light_mask = 1
tile_data = IntArray( -1769409, 3, -1769408, 1, -1769406, 3, -1769405, 1, -1703873, 3, -1703872, 1, -1703870, 3, -1703869, 1, -1638337, 3, -1638336, 1, -1638334, 3, -1638333, 1, -1572801, 3, -1572800, 1, -1572798, 3, -1572797, 1, -1507265, 3, -1507264, 1, -1507262, 3, -1507261, 1, -1441729, 3, -1441728, 1, -1441726, 3, -1441725, 1, -1376193, 3, -1376192, 1, -1376190, 3, -1376189, 1, -1310657, 3, -1310656, 1, -1310654, 3, -1310653, 1, -1245121, 3, -1245120, 1, -1245118, 3, -1245117, 1, -1179585, 3, -1179584, 1, -1179582, 3, -1179581, 1, -1114049, 3, -1114048, 1, -1114046, 3, -1114045, 1, -1048513, 16, -1048512, 15, -1048510, 16, -1048509, 15, -917455, 17, -917454, 14, -917452, 17, -917451, 14, -917446, 17, -917445, 14, -851919, 3, -851918, 1, -851916, 3, -851915, 1, -851910, 16, -851909, 15, -786383, 3, -786382, 1, -786380, 3, -786379, 1, -720847, 3, -720846, 1, -720844, 3, -720843, 1, -655311, 3, -655310, 1, -655308, 3, -655307, 1, -655298, 17, -655297, 14, -655296, 12, -589775, 3, -589774, 1, -589772, 3, -589771, 1, -589762, 16, -589761, 15, -524239, 3, -524238, 1, -524236, 3, -524235, 1, -458703, 3, -458702, 1, -458700, 3, -458699, 1, -393167, 3, -393166, 1, -393164, 3, -393163, 1, -393157, 17, -393156, 14, -327631, 3, -327630, 1, -327628, 3, -327627, 1, -327621, 16, -327620, 15, -262095, 3, -262094, 1, -262092, 3, -262091, 1, -196559, 16, -196558, 15, -196556, 16, -196555, 15, -131009, 17, -131008, 14, -65473, 16, -65472, 15, 65553, 11, 131078, 17, 131079, 0, 131080, 0, 131081, 14, 131082, 12, 131085, 17, 131086, 0, 131087, 0, 131088, 0, 131089, 0, 131090, 14, 131091, 12, 131094, 17, 131095, 0, 131096, 0, 131097, 14, 131131, 17, 131132, 14, 196614, 16, 196615, 2, 196616, 2, 196617, 15, 196621, 3, 196622, 4, 196623, 4, 196624, 4, 196625, 4, 196626, 1, 196630, 16, 196631, 2, 196632, 2, 196633, 15, 196656, 17, 196657, 0, 196658, 0, 196659, 0, 196660, 14, 196667, 16, 196668, 15, 262157, 3, 262158, 4, 262159, 4, 262160, 4, 262161, 4, 262162, 1, 262192, 3, 262193, 4, 262194, 4, 262195, 4, 262196, 1, 327693, 3, 327694, 4, 327695, 4, 327696, 4, 327697, 4, 327698, 1, 327728, 3, 327729, 4, 327730, 4, 327731, 4, 327732, 1, 327733, 12, 393229, 3, 393230, 4, 393231, 4, 393232, 4, 393233, 4, 393234, 1, 393264, 3, 393265, 4, 393266, 4, 393267, 4, 393268, 1, 458765, 3, 458766, 4, 458767, 4, 458768, 4, 458769, 4, 458770, 1, 458800, 3, 458801, 4, 458802, 4, 458803, 4, 458804, 1, 524301, 3, 524302, 4, 524303, 4, 524304, 4, 524305, 4, 524306, 1, 524336, 3, 524337, 4, 524338, 4, 524339, 4, 524340, 1, 589827, 10, 589828, 10, 589829, 10, 589837, 3, 589838, 4, 589839, 4, 589840, 4, 589841, 4, 589842, 1, 589872, 3, 589873, 4, 589874, 4, 589875, 4, 589876, 1, 655362, 17, 655363, 0, 655364, 0, 655365, 0, 655366, 0, 655367, 0, 655368, 0, 655369, 0, 655370, 0, 655371, 0, 655372, 14, 655373, 3, 655374, 4, 655375, 4, 655376, 4, 655377, 4, 655378, 1, 655408, 3, 655409, 4, 655410, 4, 655411, 4, 655412, 1, 720898, 3, 720899, 4, 720900, 4, 720901, 4, 720902, 4, 720903, 4, 720904, 4, 720905, 4, 720906, 4, 720907, 4, 720908, 1, 720909, 3, 720910, 4, 720911, 4, 720912, 4, 720913, 4, 720914, 1, 720944, 3, 720945, 4, 720946, 4, 720947, 4, 720948, 1, 786434, 3, 786435, 4, 786436, 4, 786437, 4, 786438, 4, 786439, 4, 786440, 4, 786441, 4, 786442, 4, 786443, 4, 786444, 1, 786445, 3, 786446, 4, 786447, 4, 786448, 4, 786449, 4, 786450, 1, 786480, 3, 786481, 4, 786482, 4, 786483, 4, 786484, 1, 851970, 3, 851971, 4, 851972, 4, 851973, 4, 851974, 4, 851975, 4, 851976, 4, 851977, 4, 851978, 4, 851979, 4, 851980, 1, 851981, 3, 851982, 4, 851983, 4, 851984, 4, 851985, 4, 851986, 1, 852016, 16, 852017, 2, 852018, 2, 852019, 2, 852020, 15, 917506, 3, 917507, 4, 917508, 4, 917509, 4, 917510, 4, 917511, 4, 917512, 4, 917513, 4, 917514, 4, 917515, 4, 917516, 1, 917517, 3, 917518, 4, 917519, 4, 917520, 4, 917521, 4, 917522, 1, 983042, 3, 983043, 4, 983044, 4, 983045, 4, 983046, 4, 983047, 4, 983048, 4, 983049, 4, 983050, 4, 983051, 4, 983052, 1, 983053, 3, 983054, 4, 983055, 4, 983056, 4, 983057, 4, 983058, 1, 1048578, 16, 1048579, 2, 1048580, 2, 1048581, 2, 1048582, 2, 1048583, 2, 1048584, 2, 1048585, 2, 1048586, 2, 1048587, 2, 1048588, 15, 1048589, 16, 1048590, 2, 1048591, 2, 1048592, 2, 1048593, 2, 1048594, 15, 2293778, 17, 2293779, 0, 2293780, 0, 2293781, 0, 2293782, 0, 2293783, 14, 2293794, 6, 2293807, 5, 2293820, 17, 2293821, 0, 2293822, 0, 2293823, 0, 2293824, 0, 2293825, 14, 2359314, 3, 2359315, 4, 2359316, 4, 2359317, 4, 2359318, 4, 2359319, 1, 2359320, 12, 2359323, 12, 2359326, 12, 2359329, 12, 2359332, 12, 2359335, 12, 2359338, 12, 2359341, 12, 2359344, 12, 2359347, 12, 2359350, 12, 2359353, 12, 2359356, 3, 2359357, 4, 2359358, 4, 2359359, 4, 2359360, 4, 2359361, 1, 2424850, 3, 2424851, 4, 2424852, 4, 2424853, 4, 2424854, 4, 2424855, 1, 2424892, 3, 2424893, 4, 2424894, 4, 2424895, 4, 2424896, 4, 2424897, 1, 2490386, 16, 2490387, 2, 2490388, 2, 2490389, 2, 2490390, 2, 2490391, 15, 2490428, 16, 2490429, 2, 2490430, 2, 2490431, 2, 2490432, 2, 2490433, 15, 2752530, 17, 2752531, 0, 2752532, 0, 2752533, 0, 2752534, 0, 2752535, 14, 2752546, 5, 2752559, 6, 2752572, 17, 2752573, 0, 2752574, 0, 2752575, 0, 2752576, 0, 2752577, 14, 2818066, 3, 2818067, 4, 2818068, 4, 2818069, 4, 2818070, 4, 2818071, 1, 2818072, 12, 2818075, 12, 2818078, 12, 2818081, 12, 2818084, 12, 2818087, 12, 2818090, 12, 2818093, 12, 2818096, 12, 2818099, 12, 2818102, 12, 2818105, 12, 2818108, 3, 2818109, 4, 2818110, 4, 2818111, 4, 2818112, 4, 2818113, 1, 2883602, 3, 2883603, 4, 2883604, 4, 2883605, 4, 2883606, 4, 2883607, 1, 2883644, 3, 2883645, 4, 2883646, 4, 2883647, 4, 2883648, 4, 2883649, 1, 2949138, 3, 2949139, 4, 2949140, 4, 2949141, 4, 2949142, 4, 2949143, 1, 2949180, 3, 2949181, 4, 2949182, 4, 2949183, 4, 2949184, 4, 2949185, 1, 3014671, 12, 3014674, 3, 3014675, 4, 3014676, 4, 3014677, 4, 3014678, 4, 3014679, 1, 3014716, 3, 3014717, 4, 3014718, 4, 3014719, 4, 3014720, 4, 3014721, 1, 3014722, 12, 3080210, 3, 3080211, 4, 3080212, 4, 3080213, 4, 3080214, 4, 3080215, 1, 3080252, 3, 3080253, 4, 3080254, 4, 3080255, 4, 3080256, 4, 3080257, 1, 3145746, 3, 3145747, 4, 3145748, 4, 3145749, 4, 3145750, 4, 3145751, 1, 3145788, 3, 3145789, 4, 3145790, 4, 3145791, 4, 3145792, 4, 3145793, 1, 3211282, 3, 3211283, 4, 3211284, 4, 3211285, 4, 3211286, 4, 3211287, 1, 3211324, 3, 3211325, 4, 3211326, 4, 3211327, 4, 3211328, 4, 3211329, 1, 3276818, 3, 3276819, 4, 3276820, 4, 3276821, 4, 3276822, 4, 3276823, 1, 3276860, 3, 3276861, 4, 3276862, 4, 3276863, 4, 3276864, 4, 3276865, 1, 3342354, 3, 3342355, 4, 3342356, 4, 3342357, 4, 3342358, 4, 3342359, 1, 3342396, 3, 3342397, 4, 3342398, 4, 3342399, 4, 3342400, 4, 3342401, 1, 3407890, 16, 3407891, 2, 3407892, 2, 3407893, 2, 3407894, 2, 3407895, 15, 3407932, 16, 3407933, 2, 3407934, 2, 3407935, 2, 3407936, 2, 3407937, 15 )
__meta__ = {
"_edit_lock_": true
}

[node name="KillZones" type="Node2D" parent="."]

editor/display_folded = true
__meta__ = {
"_edit_lock_": true
}

[node name="KillZone" parent="KillZones" instance=ExtResource( 4 )]

transform/pos = Vector2( -233.505, 945.357 )

[node name="KillZone1" parent="KillZones" instance=ExtResource( 4 )]

transform/pos = Vector2( 2453.79, 527.051 )

[node name="KillZone2" parent="KillZones" instance=ExtResource( 4 )]

transform/pos = Vector2( 5331.23, 525.375 )

[node name="KillZone3" parent="KillZones" instance=ExtResource( 4 )]

transform/pos = Vector2( 4930.94, 3257.2 )

[node name="KillZone4" parent="KillZones" instance=ExtResource( 4 )]

transform/pos = Vector2( 1187.85, 3236.13 )

[node name="KillZone8" parent="KillZones" instance=ExtResource( 4 )]

transform/pos = Vector2( -1247.18, 3232.71 )

[node name="KillZone5" parent="KillZones" instance=ExtResource( 4 )]

transform/pos = Vector2( 6403.81, 1879.91 )
transform/rot = 90.0

[node name="KillZone6" parent="KillZones" instance=ExtResource( 4 )]

transform/pos = Vector2( -1620.48, -993.489 )
transform/rot = 90.0

[node name="KillZone9" parent="KillZones" instance=ExtResource( 4 )]

transform/pos = Vector2( -1627.33, 1879.91 )
transform/rot = 90.0

[node name="KillZone7" parent="KillZones" instance=ExtResource( 4 )]

transform/pos = Vector2( 6403.81, -993.489 )
transform/rot = 90.0

[node name="Doors" type="Node2D" parent="."]

__meta__ = {
"_edit_lock_": true
}

[node name="Door" parent="Doors" instance=ExtResource( 5 )]

transform/pos = Vector2( 771.082, 538.249 )

[node name="Door1" parent="Doors" instance=ExtResource( 5 )]

transform/pos = Vector2( 902.22, 26.7388 )

[node name="Door3" parent="Doors" instance=ExtResource( 5 )]

transform/pos = Vector2( 452.878, 26.7388 )

[node name="Door4" parent="Doors" instance=ExtResource( 5 )]

transform/pos = Vector2( 1328.65, 2138.41 )

[node name="Door2" parent="Doors" instance=ExtResource( 5 )]

transform/pos = Vector2( 1578.64, 27.0687 )

[node name="Door5" parent="Doors" instance=ExtResource( 5 )]

transform/pos = Vector2( 3137.9, 90.1397 )

[node name="MovePlatform" type="Node2D" parent="."]

editor/display_folded = true
__meta__ = {
"_edit_lock_": true
}

[node name="MovingPlatformY" parent="MovePlatform" instance=ExtResource( 6 )]

transform/pos = Vector2( 924.888, 2261.59 )

[node name="MovingPlatformY1" parent="MovePlatform" instance=ExtResource( 6 )]

transform/pos = Vector2( 4432.93, 2244.77 )

[node name="Monsters" type="Node2D" parent="."]

editor/display_folded = true
__meta__ = {
"_edit_lock_": true
}

[node name="Bobo" parent="Monsters" instance=ExtResource( 7 )]

transform/pos = Vector2( 1744.2, 2257.77 )

[node name="Bobo2" parent="Monsters" instance=ExtResource( 7 )]

transform/pos = Vector2( 1762.37, 2712.19 )

[node name="Bobo1" parent="Monsters" instance=ExtResource( 7 )]

transform/pos = Vector2( 2653.16, 2708.41 )

[node name="Roco" parent="Monsters" instance=ExtResource( 8 )]

transform/pos = Vector2( 3523.34, 2710.76 )

[node name="Roco1" parent="Monsters" instance=ExtResource( 8 )]

transform/pos = Vector2( 2682.79, 2254.84 )

[node name="Gobo" parent="Monsters" instance=ExtResource( 9 )]

transform/pos = Vector2( 3344.9, 2264.88 )

[node name="Coins" type="Node2D" parent="."]

editor/display_folded = true
__meta__ = {
"_edit_lock_": true
}

[node name="Coin" parent="Coins" instance=ExtResource( 10 )]

transform/pos = Vector2( 1591.02, 2267.19 )

[node name="Coin1" parent="Coins" instance=ExtResource( 10 )]

transform/pos = Vector2( 2356.68, 2266.08 )

[node name="Coin3" parent="Coins" instance=ExtResource( 10 )]

transform/pos = Vector2( 2353.58, 2708.08 )

[node name="Coin4" parent="Coins" instance=ExtResource( 10 )]

transform/pos = Vector2( 1590.17, 2710.35 )

[node name="Coin5" parent="Coins" instance=ExtResource( 10 )]

transform/pos = Vector2( 3201.07, 2703.53 )

[node name="Coin2" parent="Coins" instance=ExtResource( 10 )]

transform/pos = Vector2( 3182.16, 2264.97 )

[node name="Coin7" parent="Coins" instance=ExtResource( 11 )]

transform/pos = Vector2( 3292.03, -226.578 )

[node name="Coin6" parent="Coins" instance=ExtResource( 11 )]

transform/pos = Vector2( 3294.55, -745.19 )

[node name="Coin8" parent="Coins" instance=ExtResource( 11 )]

transform/pos = Vector2( 4189.75, -1001.93 )

[node name="Coin9" parent="Coins" instance=ExtResource( 11 )]

transform/pos = Vector2( 4089.78, -170.355 )

[node name="Heart" parent="." instance=ExtResource( 12 )]

transform/pos = Vector2( 4032.61, 2602.61 )

[node name="Player" parent="." instance=ExtResource( 13 )]

transform/pos = Vector2( 281.873, 568.267 )

[node name="Hazzards" type="Node2D" parent="."]

__meta__ = {
"_edit_lock_": true
}

[node name="RotatingFire" parent="Hazzards" instance=ExtResource( 14 )]

transform/pos = Vector2( 2691.15, 2445 )

[node name="RotatingFire1" parent="Hazzards" instance=ExtResource( 14 )]

transform/pos = Vector2( 3562.22, 2443.48 )

[node name="RotatingFire2" parent="Hazzards" instance=ExtResource( 14 )]

transform/pos = Vector2( 1875.47, 2446 )


